# limit-order-book

./: CMakeLists.txt  README.md
bench/: benchmark_main.cpp
data/: crossing_orders.csv  sample_orders.csv
docs/: architecture.md
include/lob/: csv_replay.hpp  matching_engine.hpp  types.hpp
src/: csv_replay.cpp  main.cpp  matching_engine.cpp
tests/: matching_engine_tests.cpp
